--- a/petsbar/index.html
+++ b/petsbar/index.html
@@ -7,75 +7,47 @@
     
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
-
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/content.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&family=Rubik&family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header id="header" class="header">
 
+        <div class="lable">
+            <h1>Pet's Bar</h1>
+            <h2>Ваш питомец этого достоин</h2>
+        </div>
+
+        <div class="menuhead">
+            <a href="#">Контакты</a>
+            <a href="#">Доставка</a>
+            <a href="#">О нас</a>
+            <div class="tel">
+                <img src="images/phone_PNG48996.png">
+                <a href="tel:+78142332211">8 800 234 23 43</a>
+            </div>
+        </div>
+
+        <div class="basket">
+            <div class="divbas">
+                <a href="#">Корзина</a>
+                <img src="images/shopping_cart_PNG38.png">
+            </div>
+                
+            <br>
+            <br>
+            <a href="#">Оформить заказ</a>
+        </div>        
+
     </header>
     <div class="content">
 
-        sdfds
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        dfd                                  hhh                   hh
-        dfd                                  hhh                   hh
-        dfd                  <br>                hhh                   hh
-        dfd                                  hhh                   hh
-        dfd                 <br>                 hhh                   hh
-        dfd                                  hhh                   hh
-        dfd                                  hhh                   hh
-        dfd                                  hhh                   hh
-        dfd                          <br>        hhh                   hh
-        sdfds
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        dfd                                  hhh                   hh
-        dfd                                  hhh                   hh
-        dfd                  <br>                hhh                   hh
-        dfd                                  hhh                   hh
-        dfd                 <br>                 hhh                   hh
-        dfd                                  hhh                   hh
-        dfd                                  hhh                   hh
-        dfd                                  hhh                   hh
-        dfd                          <br>        hhh                   hh
-        sdfds
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        dfd                                  hhh                   hh
-        dfd                                  hhh                   hh
-        dfd                  <br>                hhh                   hh
-        dfd                                  hhh                   hh
-        dfd                 <br>                 hhh                   hh
-        dfd                                  hhh                   hh
-        dfd                                  hhh                   hh
-        dfd                                  hhh                   hh
-        dfd                          <br>        hhh                   hh
     </div>
     <footer id="footer" class="footer">
-sadasd
+
     </footer>
 </body>
 
