--- a/petsbar/index.html
+++ b/petsbar/index.html
@@ -41,8 +41,15 @@
             <br>
             <a href="#">Оформить заказ</a>
         </div>        
-
     </header>
+    <div class="nav">
+        <a href="">Кошкам</a>
+        <a href="">Собакам</a>
+        <a href="">Рыбам</a>
+        <a href="">Птицам</a>
+        <a href="">Грызунам</a>
+        <a href="">Рептилиям</a>
+    </div>
     <div class="content">
 
     </div>
