--- a/petsbar/index.html
+++ b/petsbar/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/content.css">
     <link rel="stylesheet" href="css/footer.css">
-    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&family=Rubik&family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/menu.css">
+    <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&family=Rubik&family=Ruda:wght@500&family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -25,10 +26,10 @@
             <a href="#">Контакты</a>
             <a href="#">Доставка</a>
             <a href="#">О нас</a>
-            <div class="tel">
-                <img src="images/phone_PNG48996.png">
-                <a href="tel:+78142332211">8 800 234 23 43</a>
-            </div>
+        </div>
+        <div class="tel">
+            <img src="images/phone_PNG48996.png">
+            <a href="tel:+78142332211">8 800 234 23 43</a>
         </div>
 
         <div class="basket">
@@ -42,14 +43,62 @@
             <a href="#">Оформить заказ</a>
         </div>        
     </header>
-    <div class="nav">
-        <a href="">Кошкам</a>
-        <a href="">Собакам</a>
-        <a href="">Рыбам</a>
-        <a href="">Птицам</a>
-        <a href="">Грызунам</a>
-        <a href="">Рептилиям</a>
-    </div>
+    <nav class="dws-menu">
+        <ul>
+            <li><a href="#" class="btn">Кошкам</a>
+                <ul class="drop_menu">
+                    <li><a href="#">Корм</a>
+                    <a href="#">Лакомства</a>
+                    <a href="#">Игрушки</a>
+                    <a href="#">Наполнители</a>
+                    <a href="#">Ветаптека</a></li>
+                </ul>
+            </li>
+            <li><a href="#" class="btn">Собакам</a>
+                <ul class="drop_menu">
+                    <li><a href="#">Корм</a>
+                    <a href="#">Лакомства</a>
+                    <a href="#">Игрушки</a>
+                    <a href="#">Аксессуары</a>
+                    <a href="#">Ветаптека</a></li>
+                </ul>
+            </li>
+            <li><a href="#" class="btn">Рыбам</a>
+                <ul class="drop_menu">
+                    <li><a href="#">Корм</a>
+                    <a href="#">Аквариумы</a>
+                    <a href="#">Аксессуары</a>
+                    <a href="#">Ветаптека</a></li>
+                </ul>
+            </li>
+            <li><a href="#" class="btn">Птицам</a>
+                <ul class="drop_menu">
+                    <li><a href="#">Корм</a>
+                    <a href="#">Лакомства</a>
+                    <a href="#">Игрушки</a>
+                    <a href="#">Клетки</a>
+                    <a href="#">Ветаптека</a></li>
+                </ul>
+            </li>
+            <li><a href="#" class="btn">Грызунам</a>
+                <ul class="drop_menu">
+                    <li><a href="#">Корм</a>
+                    <a href="#">Лакомства</a>
+                    <a href="#">Игрушки</a>
+                    <a href="#">Наполнители</a>
+                    <a href="#">Клетки</a>
+                    <a href="#">Ветаптека</a></li>
+                </ul>
+            </li>
+            <li><a href="#" class="btn">Рептилиям</a>
+                <ul class="drop_menu">
+                    <li><a href="#">Корм</a>
+                    <a href="#">Террариумы</a>
+                    <a href="#">Ветаптека</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
     <div class="content">
 
     </div>
