--- a/petsbar/index.html
+++ b/petsbar/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Document</title>
+    <title>Pet's Bar</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/content.css">
@@ -100,7 +100,7 @@
         </ul>
     </nav>
     <div class="content">
-
+        
     </div>
     <footer id="footer" class="footer">
 
