--- a/petsbar/index.html
+++ b/petsbar/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/slider.css">
+    <link rel="stylesheet" href="assets/css/grid.css" media="screen">
     <link href="https://fonts.googleapis.com/css2?family=Rock+Salt&family=Rubik&family=Ruda:wght@500&family=Sansita&family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
@@ -134,48 +135,55 @@
                      сухой 3 кг для собак мелких и карликовых пород</p>
                 <div class="buy">
                     <h6>1200 руб</h6>
-                    <a>В корзину</a>
+                    <a href="">В корзину</a>
                 </div>
             </div>
             <div class="cart">
-                <img src="images/cart.png" alt="">
+                <img src="images\4598.750.png" alt="">
                 <p>Pro Plan "Adult Small&Mini Sensitive Digestion"
                      сухой 3 кг для собак мелких и карликовых пород</p>
                 <div class="buy">
                     <h6>1200 руб</h6>
-                    <a>В корзину</a>
+                    <a href="">В корзину</a>
                 </div>
             </div>
             <div class="cart">
-                <img src="images/cart.png" alt="">
+                <img src="images\9666.190x0@2x.png" alt="">
                 <p>Pro Plan "Adult Small&Mini Sensitive Digestion"
                      сухой 3 кг для собак мелких и карликовых пород</p>
                 <div class="buy">
                     <h6>1200 руб</h6>
-                    <a>В корзину</a>
+                    <a href="">В корзину</a>
                 </div>
             </div>
             <div class="cart">
-                <img src="images/cart.png" alt="">
+                <img src="images\12293285-.png" alt="">
                 <p>Pro Plan "Adult Small&Mini Sensitive Digestion"
                      сухой 3 кг для собак мелких и карликовых пород</p>
                 <div class="buy">
                     <h6>1200 руб</h6>
-                    <a>В корзину</a>
+                    <a href="">В корзину</a>
                 </div>
             </div>
             <div class="cart">
-                <img src="images/cart.png" alt="">
+                <img src="images\16223.253.png" alt="">
                 <p>Pro Plan "Adult Small&Mini Sensitive Digestion"
                      сухой 3 кг для собак мелких и карликовых пород</p>
                 <div class="buy">
                     <h6>1200 руб</h6>
-                    <a>В корзину</a>
+                    <a href="">В корзину</a>
+                </div>
+            </div>
+            <div class="cart">
+                <img src="images\5454.580@2x.png" alt="">
+                <p>Pro Plan "Adult Small&Mini Sensitive Digestion"
+                     сухой 3 кг для собак мелких и карликовых пород</p>
+                <div class="buy">
+                    <h6>1200 руб</h6>
+                    <a href="">В корзину</a>
                 </div>
             </div>
         </div>
-        
-
         
     </div>
     <footer id="footer" class="footer">
