--- a/petsbar/index.html
+++ b/petsbar/index.html
@@ -36,8 +36,7 @@
 
         <div class="basket">
             <div class="divbas">
-                <a href="#">Корзина</a>
-                <img src="images/shopping_cart_PNG38.png">
+                <a href="#">Корзина<img src="images/shopping_cart_PNG38.png"></a>
             </div>
                 
             <br>
