--- a/lending/index.html
+++ b/lending/index.html
@@ -5,11 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Сайты под ключ</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/header.css" media="screen">
     <link rel="stylesheet" href="css/content.css" media="screen">
     <link rel="stylesheet" href="css/flipbox.css" media="screen">
     <link rel="stylesheet" href="css/dopworks.css">
+    <link rel="stylesheet" href="css/contact.css">
 </head>
 <body>
     <header id="header" class="header">
@@ -27,8 +35,8 @@
         </div>
     </header>
 
-    <div class="container">
-        <div id="content" class="content">
+    <div id="content" class="container">
+        <div class="content">
 
             <div class="cart flip-box">
                 <div class="flip-box-inner">
@@ -172,7 +180,7 @@
                             <p>Разработка десктопных приложений</p>
                         </div>
                         <div class="cartimgs">
-                            <img src="images/icons/qt_content.png" style="width: 60px;">
+                            <img src="images/icons/qt_content.png" style="width: 60px; height: 60px;">
                             <img src="images/icons/cpps.png" style="width: 60px;">
                         </div>
                     </div>
@@ -189,7 +197,7 @@
                             <p>Разработка интерфейсов для работы с базами данных</p>
                         </div>
                         <div class="cartimgs">
-                            <img src="images/icons/qt_content.png" style="width: 60px;">
+                            <img src="images/icons/qt_content.png" style="width: 60px; height: 60px;">
                             <img src="images/icons/SQL.png" style="width: 60px;">
                             <img src="images/icons/cpps.png" style="width: 60px;">
                         </div>
@@ -228,13 +236,50 @@
                         </div>
                     </div>
                     <div class="flipp-box-back">
-                      <p>При необходимости - несколько дизанов для возможности выбора понравившегося дизайна</p>
+                      <p>Помогу упростить работу в операционной системе Linux</p>
                     </div>
                   </div>
             </div>
 
         </div>
 
+    </div>
+    <div class="container">
+        <div class="conth">
+            <h2 class="hcont" >Контакты</h2>
+        </div>
+        
+        <div id="contact" class="contenttwo">
+            
+            <div class="contact">
+                <a href="mailto:gexar47@gmail.com&body=привет?subject=хочу от тебя сайтов">
+                    <img src="images/icons/mail.png">
+                </a>
+                <a href="mailto:gexar47@gmail.com&body=привет?subject=хочу от тебя сайтов">gexar47@gmail.com</a>
+            </div>
+
+            <div class="contact">
+                <a href="https://wa.me/89006482600?text=Я%20хочу%20от%20тебя%20сайтов">
+                    <img src="images/icons/whatsapp.png">
+                </a>
+                <a href="tel:+79006482600">8-900-648-26-00</a>
+            </div>
+
+            <div class="contact">
+                <a href="https://telegram.im/@gexarVik" target="_blank">
+                    <img src="images/icons/telegram.png">
+                </a>
+                <a href="https://telegram.im/@gexarVik" target="_blank">8-900-648-26-00</a>
+            </div>
+
+            <div class="contact">
+                <a href="https://github.com/BoykoVik" target="_blank">
+                    <img src="images/icons/github.png">
+                </a>
+                <a href="https://github.com/BoykoVik" target="_blank">GitHub</a>
+            </div>
+
+        </div>
     </div>
 </body>
 <script src="js/menu.js"></script>
