--- a/lending/index.html
+++ b/lending/index.html
@@ -45,7 +45,7 @@
                             <p>Создание дизайна страниц</p>
                         </div>
                         <div class="cartimgs">
-                            <img src="images/icons/figma-682083.png" style="width: 70px; height: 70px; margin-bottom: 10px;">
+                            <img class="wsev hsev" src="images/icons/figma-682083.png" style="margin-bottom: 10px;">
                         </div>
                     </div>
                     <div class="flip-box-back">
@@ -61,7 +61,7 @@
                             <p>Верстка сайтов</p>
                         </div>
                         <div class="cartimgs">
-                            <img src="images/icons/htmlcssjs.png" style="width: 200px; height: 100px;">
+                            <img class="wth hoh" src="images/icons/htmlcssjs.png">
                         </div>
                     </div>
                     <div class="flip-box-back">
@@ -77,7 +77,7 @@
                             <p>Адаптация под мобильный вид</p>
                         </div>
                         <div class="cartimgs">
-                            <img src="images/icons/htmlcssjs.png" style="width: 200px; height: 100px;">
+                            <img class="wth hoh" src="images/icons/htmlcssjs.png">
                         </div>
                     </div>
                     <div class="flip-box-back">
@@ -93,7 +93,7 @@
                             <p>Разработка серверной части</p>
                         </div>
                         <div class="cartimgs">
-                            <img src="images/icons/django-13-1175187.png" style="width: 125px; height: 60px;">
+                            <img class="wohf hsix" src="images/icons/django-13-1175187.png">
                             <img src="images/icons/SQL.png" style="width: 60px;">
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                             <p>Создание системы управления содержимым</p>
                         </div>
                         <div class="cartimgs">
-                            <img src="images/icons/django-13-1175187.png" style="width: 125px; height: 60px;">
+                            <img class="wohf hsix" src="images/icons/django-13-1175187.png">
                         </div>
                     </div>
                     <div class="flip-box-back">
@@ -126,7 +126,7 @@
                             <p>Регистрация доменного имени</p>
                         </div>
                         <div class="cartimgs">
-                            <img src="images/icons/domainname.png" style="width: 60px;">
+                            <img class="wsix" src="images/icons/domainname.png">
                         </div>
                     </div>
                     <div class="flip-box-back">
@@ -142,7 +142,7 @@
                             <p>Размещение сайта на хостинге</p>
                         </div>
                         <div class="cartimgs">
-                            <img src="images/icons/hosting.png" style="width: 60px;">
+                            <img class="wsix" src="images/icons/hosting.png">
                         </div>
                     </div>
                     <div class="flip-box-back">
@@ -158,7 +158,7 @@
                             <p>Обучение управлению содержимым</p>
                         </div>
                         <div class="cartimgs">
-                            <img src="images/icons/education.png" style="width: 60px;">
+                            <img class="wsix" src="images/icons/education.png">
                         </div>
                     </div>
                     <div class="flip-box-back">
@@ -180,8 +180,8 @@
                             <p>Разработка десктопных приложений</p>
                         </div>
                         <div class="cartimgs">
-                            <img src="images/icons/qt_content.png" style="width: 60px; height: 60px;">
-                            <img src="images/icons/cpps.png" style="width: 60px;">
+                            <img class="wsix hsix" src="images/icons/qt_content.png">
+                            <img class="wsix" src="images/icons/cpps.png">
                         </div>
                     </div>
                     <div class="flipp-box-back">
@@ -197,9 +197,9 @@
                             <p>Разработка интерфейсов для работы с базами данных</p>
                         </div>
                         <div class="cartimgs">
-                            <img src="images/icons/qt_content.png" style="width: 60px; height: 60px;">
-                            <img src="images/icons/SQL.png" style="width: 60px;">
-                            <img src="images/icons/cpps.png" style="width: 60px;">
+                            <img class="wsix hsix" src="images/icons/qt_content.png">
+                            <img class="wsix" src="images/icons/SQL.png">
+                            <img class="wsix" src="images/icons/cpps.png">
                         </div>
                     </div>
                     <div class="flipp-box-back">
@@ -215,8 +215,8 @@
                             <p>Написание telegram-ботов</p>
                         </div>
                         <div class="cartimgs">
-                            <img src="images/icons/telegram.png" style="width: 60px;">
-                            <img src="images/icons/python.png" style="width: 60px;">
+                            <img class="wsix" src="images/icons/telegram.png">
+                            <img class="wsix" src="images/icons/python.png">
                         </div>
                     </div>
                     <div class="flipp-box-back">
@@ -232,7 +232,7 @@
                             <p>Написание Bash-скриптов</p>
                         </div>
                         <div class="cartimgs">
-                            <img src="images/icons/bash.png" style="width: 120px;">
+                            <img class="wohf" src="images/icons/bash.png">
                         </div>
                     </div>
                     <div class="flipp-box-back">
