--- a/lending/index.html
+++ b/lending/index.html
@@ -259,10 +259,10 @@
             </div>
 
             <div class="contact">
-                <a href="https://wa.me/89006482600?text=Я%20хочу%20от%20тебя%20сайтов">
+                <a href="https://api.whatsapp.com/send?phone=79006482600&text=%D0%94%D0%BE%D0%B1%D1%80%D1%8B%D0%B9%20%D0%B4%D0%B5%D0%BD%D1%8C%2C%20%D1%85%D0%BE%D1%87%D1%83%20%D0%BE%D1%82%20%D0%92%D0%B0%D1%81%20%D1%81%D0%B0%D0%B9%D1%82...">
                     <img src="images/icons/whatsapp.png">
                 </a>
-                <a href="tel:+79006482600">8-900-648-26-00</a>
+                <a href="https://api.whatsapp.com/send?phone=79006482600&text=%D0%94%D0%BE%D0%B1%D1%80%D1%8B%D0%B9%20%D0%B4%D0%B5%D0%BD%D1%8C%2C%20%D1%85%D0%BE%D1%87%D1%83%20%D0%BE%D1%82%20%D0%92%D0%B0%D1%81%20%D1%81%D0%B0%D0%B9%D1%82...">8-900-648-26-00</a>
             </div>
 
             <div class="contact">
