--- a/lending/index.html
+++ b/lending/index.html
@@ -49,7 +49,7 @@
                         </div>
                     </div>
                     <div class="flip-box-back">
-                      <p>При необходимости - несколько дизанов для возможности выбора понравившегося дизайна</p>
+                      <p>При необходимости - несколько дизайнов для возможности выбора понравившегося дизайна</p>
                     </div>
                   </div>
             </div>
