--- a/hidroizolation/index.html
+++ b/hidroizolation/index.html
@@ -26,7 +26,9 @@
         </div>
         <div class="headcontent">
             <div class="headercontainer">
-                
+                <h1>Инъекционная гидроизоляция</h1>
+                <p>Полный спектр услуг по инъекционной гидроизоляции! Оперативный выезд! Работаем по официальному договору, 100% гарантия результата! Контроль качества на всех этапах.</p>
+                <a href="">Подробнее</a>
             </div>
         </div>
     </header>
