--- a/hidroizolation/index.html
+++ b/hidroizolation/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Гидроизоляция</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/header.css" media="screen">
     <link rel="stylesheet" href="css/content.css" media="screen">
     <link rel="stylesheet" href="css/flipbox.css" media="screen">
@@ -66,6 +66,60 @@
     <div id="advantage" class="advantage">
         <div class="advantagecont">
             <h2>Преимущества работы с нами:</h2>
+            <div class="advcarts">
+                <div class="advcart">
+                    <img src="images/fons/bag.png">
+                    <h3>Большой опыт работы</h3>
+                    <a href="">Подробнее ></a>
+                </div>
+                <div class="advcart">
+                    <img src="images/fons/oks.png">
+                    <h3>Весь спектр услуг</h3>
+                    <a href="">Подробнее ></a>
+                </div>
+                <div class="advcart">
+                    <img src="images/fons/paper.png">
+                    <h3>Гарантия качества</h3>
+                    <a href="">Подробнее ></a>
+                </div>
+                <div class="advcart">
+                    <img src="images/fons/money.png">
+                    <h3>Приемлемые цены</h3>
+                    <a href="">Подробнее ></a>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+
+    <div id="price" class="price">
+        <div class="pricecontent">
+            <h2>Рассчитать стоимость работ:</h2>
+            <div class="priceform">
+                <div class="blockprice">
+                    <p>Выберите тип услуги:</p>
+                    <select name="servtype">
+                        <div class="selcont">
+                            <option class="selop" value="value1" selected>Аварийное инъектирование подземных помещений</option>
+                            <option class="selop" value="value2" >Инъектирование стен</option>
+                            <option class="selop" value="value3">Инъектирование деформационных швов</option>
+                            <option class="selop" value="value4" >Инъектирование бетонных конструкций</option>
+                            <option class="selop" value="value5">Инъектирование инженерных коммуникаций</option>
+                        </div>
+                      </select>
+                </div>
+
+                <div class="blockprice">
+                    <p>Выберите размер выполняемых работ (м):</p>
+                    <input type="number" min="1" max="44444444" size="10">
+                </div>
+
+                <div class="blockprice">
+                    <p>Полученная стоимость (руб.):</p>
+                    <input type="number" min="1" max="27">
+                </div>
+
+            </div>
         </div>
     </div>
 
