--- a/hidroizolation/index.html
+++ b/hidroizolation/index.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="css/content.css" media="screen">
     <link rel="stylesheet" href="css/flipbox.css" media="screen">
     <link rel="stylesheet" href="css/dopworks.css">
-    <link rel="stylesheet" href="css/contact.css">
 </head>
 <body>
     <header id="header" class="header">
@@ -60,8 +59,8 @@
                 </div>
             </div>
         </div>
-
     </div>
+
 
     <div id="advantage" class="advantage">
         <div class="advantagecont">
@@ -111,18 +110,56 @@
 
                 <div class="blockprice">
                     <p>Выберите размер выполняемых работ (м):</p>
-                    <input type="number" min="1" max="44444444" size="10">
+                    <input class="mettrs" type="number" min="1" max="44444444" size="10">
                 </div>
 
                 <div class="blockprice">
                     <p>Полученная стоимость (руб.):</p>
-                    <input type="number" min="1" max="27">
+                    <input class="cost" type="number" min="1" max="27">
+                    <p>* Конечная цена рассчитывается специалистом компании</p>
                 </div>
 
             </div>
         </div>
     </div>
 
+    <div id="ourworks" class="ourworks">
+        <div class="ourworkscont">
+            <h2>Наши работы:</h2>
+
+            <div class="worksa">
+                <img src="images/fons/inyektsionnaya-gidroizolyatsiya-01.jpg">
+                <p>Полный спектр услуг по инъекционной гидроизоляции! Оперативный выезд! Работаем по официальному договору, 100% гарантия результата! Контроль качества на всех этапах.
+                    Полный спектр услуг по инъекционной гидроизоляции! Оперативный выезд! Работаем по официальному договору, 100% гарантия результата! Контроль качества на всех этапах.
+                </p>
+            </div>
+
+            <div class="worksb">
+                <p>Полный спектр услуг по инъекционной гидроизоляции! Оперативный выезд! Работаем по официальному договору, 100% гарантия результата! Контроль качества на всех этапах.
+                    Полный спектр услуг по инъекционной гидроизоляции! Оперативный выезд! Работаем по официальному договору, 100% гарантия результата! Контроль качества на всех этапах.
+                </p>
+                <img src="images/fons/inyektsionnaya-gidroizolyatsiya-01.jpg">
+            </div>
+
+            <div class="worksa">
+                <img src="images/fons/inyektsionnaya-gidroizolyatsiya-01.jpg">
+                <p>Полный спектр услуг по инъекционной гидроизоляции! Оперативный выезд! Работаем по официальному договору, 100% гарантия результата! Контроль качества на всех этапах.
+                    Полный спектр услуг по инъекционной гидроизоляции! Оперативный выезд! Работаем по официальному договору, 100% гарантия результата! Контроль качества на всех этапах.
+                </p>
+            </div>
+
+            <a href="">посмотреть ещё</a>
+        </div>
+    </div>
+
+    <div id="contact" class="contact">
+        <div class="contactcontainer">
+            <h2>Контакты:</h2>
+            <div class="mapcont">
+
+            </div>
+        </div>
+    </div>
 
     <div id="footer" class="footer">
 
