--- a/lending/index.html
+++ b/lending/index.html
@@ -278,6 +278,7 @@
                 </a>
                 <a href="https://github.com/BoykoVik" target="_blank">GitHub</a>
             </div>
+            <a href="hydro/index2.html">Гидроизоляция</a>
 
         </div>
     </div>
