--- a/hidroizolation/index2.html
+++ b/hidroizolation/index2.html
@@ -8,18 +8,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/header.css" media="screen">
     <link rel="stylesheet" href="css/content.css" media="screen">
-    <link rel="stylesheet" href="css/flipbox.css" media="screen">
-    <link rel="stylesheet" href="css/dopworks.css">
+    <link rel="stylesheet" href="css/footer.css" media="screen">
 </head>
 <body>
-    <header id="header" class="header">
+    <header id="content" class="header">
         <div id="navbarwidth" class="navbarwidth">
             <div class="navbar">
                 <img src="images/icons/depositphotos_173326632-stock-illustration-water-proofing-solutions.jpg" style="width: 100px;">
                 <a href="#content">Главная</a>
-                <a href="#content">Услуги</a>
-                <a href="#content">Цены</a>
-                <a href="#news">Наши работы</a>
+                <a href="#servise">Услуги</a>
+                <a href="#price">Цены</a>
+                <a href="#ourworks">Наши работы</a>
                 <a href="#contact">Контакты</a>
               </div>
         </div>
@@ -153,16 +152,65 @@
     </div>
 
     <div id="contact" class="contact">
+        <h2>Контакты:</h2>
         <div class="contactcontainer">
-            <h2>Контакты:</h2>
+            
             <div class="mapcont">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18047.599346939114!2d37.55912594662727!3d55.56807068575902!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414aada3139fd541%3A0xb12c40ac65de4ef7!2s27%20Barbershop!5e0!3m2!1sru!2sru!4v1640370064474!5m2!1sru!2sru" width="550" height="360" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
 
+            <div class="contabout">
+                <h3>Адрес:</h3>
+                <p>ул. Пушкина, д. Кукушкина</p>
+                <h3>E-mail:</h3>
+                <p>gidroizolashion@mail.ru</p>
+                <h3>Телефон:</h3>
+                <p>8 (800)-535-35-35</p>
             </div>
         </div>
     </div>
 
     <div id="footer" class="footer">
-
+        <div class="footercont">
+            <div class="footmenu">
+                <h3>Меню</h3>
+                <a href="">Главная</a>
+                <a href="">Услуги</a>
+                <a href="">Цены</a>
+                <a href="">Наши работы</a>
+                <a href="">Контакты</a>
+            </div>
+            <div class="footserv">
+                <h3>Услуги</h3>
+                <a href="">Инъектирование подземных помещений</a>
+                <a href="">Инъектирование стен</a>
+                <a href="">Инъектирование деформационных швов</a>
+                <a href="">Инъектирование бетонных конструкций</a>
+                <a href="">Инъектирование инженерных коммуникаций</a>
+            </div>
+            <div class="footcomp">
+                <h3>Компания</h3>
+                <a href="">О нас</a>
+                <a href="">Партнеры</a>
+                <a href="">Команда</a>
+                <a href="">Лицензии</a>
+            </div>
+            <div class="footcontact">
+                <h3>Связаться с нами</h3>
+                <div class="controw">
+                    <img src="images/fons/home.png" alt="">
+                    <p>ул. Пушкина, д. Кукушкина</p>
+                </div>
+                <div class="controw">
+                    <img src="images/fons/phone.png" alt="">
+                    <p>8 (800)-535-35-35</p>
+                </div>
+                <div class="controw">
+                    <img src="images/fons/mail.png" alt="">
+                    <p>gidroizolashion@mail.ru</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 <script src="js/menu.js"></script>
