--- a/hidroizolation/index2.html
+++ b/hidroizolation/index2.html
@@ -27,7 +27,7 @@
             <div class="headercontainer">
                 <h1>Инъекционная гидроизоляция</h1>
                 <p>Полный спектр услуг по инъекционной гидроизоляции! Оперативный выезд! Работаем по официальному договору, 100% гарантия результата! Контроль качества на всех этапах.</p>
-                <a href="">Подробнее</a>
+                <button id="openform" href="">Оставить заявку</button>
                 <img src="images/fons/Group 5.png" alt="">
             </div>
         </div>
@@ -214,7 +214,7 @@
         </div>
     </div>
     <!--ЗАЯВКА-->
-    <div class="order">
+    <div id="order" class="order">
         <span class="close">&times;</span>
         <form action="/action_page.php" class="form-container">
             <h3>Оставить заявку</h3>
@@ -227,4 +227,5 @@
 </body>
 <script src="js/menu.js"></script>
 <script src="js/show.js"></script>
+<script src="js/formreq.js"></script>
 </html>
