--- a/hidroizolation/index2.html
+++ b/hidroizolation/index2.html
@@ -175,11 +175,11 @@
         <div class="footercont">
             <div class="footmenu">
                 <h3>Меню</h3>
-                <a href="">Главная</a>
-                <a href="">Услуги</a>
-                <a href="">Цены</a>
-                <a href="">Наши работы</a>
-                <a href="">Контакты</a>
+                <a href="#content">Главная</a>
+                <a href="#servise">Услуги</a>
+                <a href="#price">Цены</a>
+                <a href="#ourworks">Наши работы</a>
+                <a href="#contact">Контакты</a>
             </div>
             <div class="footserv">
                 <h3>Услуги</h3>
@@ -219,13 +219,11 @@
         <form action="/action_page.php" class="form-container">
             <h3>Оставить заявку</h3>
             <input type="text" class="smf" placeholder="Введите Ваше имя" required>
-            <input type="tel" class="smf" placeholder="Введите Ваш телефон" required>
-            <input type="text" class="bigf" placeholder="Опишите задачу" required>
+            <input type="tel" class="smf tel" placeholder="Введите Ваш телефон" required>
+            <textarea class="bigf" placeholder="Опишите задачу" ></textarea>
             <button type="submit" onclick="closeForm()">Отправить</button>
           </form>
     </div>
 </body>
-<script src="js/menu.js"></script>
-<script src="js/show.js"></script>
 <script src="js/formreq.js"></script>
 </html>
