--- a/hidroizolation/index2.html
+++ b/hidroizolation/index2.html
@@ -128,7 +128,7 @@
             <h2>Наши работы:</h2>
 
             <div class="worksa">
-                <img src="images/fons/inyektsionnaya-gidroizolyatsiya-01.jpg">
+                <img src="images/fons/3.jpeg">
                 <p>Полный спектр услуг по инъекционной гидроизоляции! Оперативный выезд! Работаем по официальному договору, 100% гарантия результата! Контроль качества на всех этапах.
                     Полный спектр услуг по инъекционной гидроизоляции! Оперативный выезд! Работаем по официальному договору, 100% гарантия результата! Контроль качества на всех этапах.
                 </p>
@@ -138,11 +138,11 @@
                 <p>Полный спектр услуг по инъекционной гидроизоляции! Оперативный выезд! Работаем по официальному договору, 100% гарантия результата! Контроль качества на всех этапах.
                     Полный спектр услуг по инъекционной гидроизоляции! Оперативный выезд! Работаем по официальному договору, 100% гарантия результата! Контроль качества на всех этапах.
                 </p>
-                <img src="images/fons/inyektsionnaya-gidroizolyatsiya-01.jpg">
+                <img src="images/fons/2.jpeg">
             </div>
 
             <div class="worksa">
-                <img src="images/fons/inyektsionnaya-gidroizolyatsiya-01.jpg">
+                <img src="images/fons/1.jpeg">
                 <p>Полный спектр услуг по инъекционной гидроизоляции! Оперативный выезд! Работаем по официальному договору, 100% гарантия результата! Контроль качества на всех этапах.
                     Полный спектр услуг по инъекционной гидроизоляции! Оперативный выезд! Работаем по официальному договору, 100% гарантия результата! Контроль качества на всех этапах.
                 </p>
