--- a/hidroizolation/index2.html
+++ b/hidroizolation/index2.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/content.css" media="screen">
     <link rel="stylesheet" href="css/footer.css" media="screen">
     <link rel="stylesheet" href="css/form.css" media="screen">
+    <link rel="stylesheet" href="css/min.css" media="screen">
 </head>
 <body>
     <header id="content" class="header">
