--- a/hidroizolation/index2.html
+++ b/hidroizolation/index2.html
@@ -16,7 +16,7 @@
     <header id="content" class="header">
         <div id="navbarwidth" class="navbarwidth">
             <div class="navbar">
-                <img src="images/icons/depositphotos_173326632-stock-illustration-water-proofing-solutions.jpg" style="width: 100px;">
+                <!--<img src="images/icons/depositphotos_173326632-stock-illustration-water-proofing-solutions.jpg" style="width: 50px;">-->
                 <a href="#content">Главная</a>
                 <a href="#servise">Услуги</a>
                 <a href="#price">Цены</a>
