--- a/lendingV2/index.html
+++ b/lendingV2/index.html
@@ -37,20 +37,20 @@
     <div id="content" class="container">
         <h2>Этапы работы</h2>
         <div class="stepsname">
-            <button>ТЗ</button>
-            <button>Прототип</button>
-            <button>Дизайн</button>
-            <button>Фронтенд</button>
-            <button>Бэкенд</button>
+            <button>составление технического задания</button>
+            <button>разработка дизайна</button>
+            <button>разработка пользовательской стороны</button>
+            <button>разработка серверной стороны</button>
             <button>Релиз</button>
+            <button>Поддержка</button>
         </div>
         <div class="steps">
             <p>тут написано про всякие мелочи по поводу ТЗ</p>
-            <p>тут написано про всякие мелочи по поводу Прототип</p>
             <p>тут написано про всякие мелочи по поводу Дизайн</p>
             <p>тут написано про всякие мелочи по поводу Фронтенд</p>
             <p>тут написано про всякие мелочи по поводу Бэкенд</p>
             <p>тут написано про всякие мелочи по поводу Релиз</p>
+            <p>тут написано про всякие мелочи по поводу подд</p>
         </div>
     </div>
    
